# platform-client-starter-python

./: .env  .gitignore  README.md  example.ipynb  pyproject.toml  requirements.txt
logs/: playground.logs
